deploy/prod/atividades-fisicas-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: https-forwarded-proto
  namespace: fabricaiv
spec:
  headers:
    customRequestHeaders:
      X-Forwarded-Proto: https
