deploy/prod/atividades-fisicas-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: fabricaiv
  labels:
    app: atividades-fisicas
